force-app/main/default/objects/Bank__c/Bank__c.object-meta.xml
<CustomObject>
    <label>Banco</label>
    <nameField>
        <label>Nome do Banco</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bancos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>