force-app/main/default/objects/Bank__c/fields/BankCode__c.field-meta.xml
<CustomField>
    <fullName>BankCode__c</fullName>
    <description>Código do banco.</description>
    <externalId>true</externalId>
    <label>Código do Banco</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>