force-app/main/default/objects/Bank__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Código de controle interno Salesforce.</inlineHelpText>
    <label>Código Externo</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>