force-app/main/default/objects/Bank__c/fields/NomeExtenso__c.field-meta.xml
<CustomField>
    <fullName>NomeExtenso__c</fullName>
    <label>Nome Extenso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>