force-app/main/default/objects/Bank__c/fields/Participa_da_Compe__c.field-meta.xml
<CustomField>
    <fullName>Participa_da_Compe__c</fullName>
    <label>Participa da Compe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>